vlib/v/checker/tests/match_expr_empty_branch.out
vlib/v/checker/tests/match_expr_empty_branch.vv:2:2: error: empty branch in `match` expression
    1 | _ := match true {
    2 |     true {}
      |     ~~~~
    3 |     false { 0 }
    4 | }
