vlib/v/checker/tests/match_expr_empty_branch.vv
_ := match true {
	true { }
	false { 0 }
}
